<resources>
    <string name="app_name">Lenselink Tic-Tac-Toe</string>
    <string name="item_settings">Settings</string>
    <string name="item_about">About</string>
    <string name="about">This is Michael Lenselinks final project.</string>

    <string name="name_title_X">X Player Name</string>
    <string name="name_title_O">O Player Name</string>
    <string name="name_summary_X">Sets the name of player X.</string>
    <string name="name_summary_O">Sets the name of player O.</string>

    <string name="textview_turnplayer">Start Playing</string>
    <string name="textviewScorePlayerX">Player X Score</string>
    <string name="textviewScorePlayerO">Player O Score</string>

    <string name="button_newGame">New Game</string>
    <string name="button_reset">Reset </string>
    <string name="button_X_Player">X</string>
    <string name="button_O_Player">O</string>

</resources>